qas-source/pos-web/nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: posmutosi-service
  namespace: default
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    nodePort: 30659
  selector:
    app: posmutosi
